--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
     <title></title><!-- gets populated via js from config -->
     <meta name="author" content="Computational Perception & Cognition Group (CSAIL, MIT)">
     <!--[if lt IE 9]>
