Better ending instructions.

--- a/src/viewer/viewer.html
+++ b/src/viewer/viewer.html
@@ -68,15 +68,15 @@
   </div>
 
   <div id="incomplete-task" style="display: none; text-align: center">
-    <h2>You've skimmed through all the pictures. We ask you to pay more careful attention to each one. Please spend at least <span id="sec-photo"></span> seconds per image, looking and zooming around.</h2><br>
-    <h2>The task will automatically restart momentarily.</h2><br>
+    <h2>Incomplete</h2>
+    <p>You've skimmed through all the pictures. We ask you to pay more careful attention to each one. Please spend at least <span id="sec-photo"></span> seconds per image, looking and zooming around.</p>
+    <p>The task will automatically restart momentarily.</p>
   </div>
 
   <div id="succesful-submit" style="display: none; text-align: center">
-    <p>Thank you for completing the task!</p>
-    <div style="background-color: lightgray; display: inline-block; align-items: center; padding: 20px; border-radius: 10px">
-      <p>MTurk submit code:</p>
-      <p id="submit-code"></p>
-    </div>
+    <h1>Complete!</h1>
+    <p>Your submit key is below. Copy this into the submit box in the HIT.</p>
+    <p id="submit-code"></p>
+    <p>You may refresh the page to re-view the images if you desire.</p>
   </div>
 </div>
