Submit keys are English words.

--- a/src/instructions/instructions.html
+++ b/src/instructions/instructions.html
@@ -13,10 +13,10 @@
     <div class="code"></div>
     <div class="link"></div>
   </div>
-  <div class="enter-key">
+  <form class="enter-key">
     <input name="key" placeholder="Submit Key">
-    <button type="button">Enter</button>
-  </div>
+    <button type="submit">Enter</button>
+  </form>
   <!-- TODO: enter submit code -->
   <div class="disclaimer">
     <p>You are participating in a study being performed by researchers in the MIT Computer Science and Artificial Intelligence Lab. If you have questions about this resarch, please contact <a href='mailto:zoya@mit.edu'>zoya@mit.edu</a>. Your participation in this research is voluntary. You may decline further participation, at any time, without adverse consequences. Your anonymity is assured; the researchers who have requested your participation will not receive any personal information about you.</p>
