Add question to instructions.

--- a/src/instructions/instructions.html
+++ b/src/instructions/instructions.html
@@ -2,8 +2,8 @@
   <h1 class="title"></h1>
   <h2>Instructions</h2>
   <div class="overview"></div>
+  <div class="extra-questions"></div>
   <p>
-    This task must be completed on a mobile device.
     Please scan the QR code or copy the link below into your mobile browser.
     Leave this page open.
     When you finish the mobile component, you will be given a key.
