Mostly transitioned to new dataset json format

--- a/src/viewer/viewer.html
+++ b/src/viewer/viewer.html
@@ -69,7 +69,7 @@
 
   <div id="incomplete-task" style="display: none; text-align: center">
     <h2>Incomplete</h2>
-    <p>You've skimmed through all the pictures. We ask you to pay more careful attention to each one. Please spend at least <span id="sec-photo"></span> seconds per image, looking and zooming around.</p>
+    <p>You've skimmed through all the pictures. We ask you to pay more careful attention to each one. Please spend at least <span id="sec-image"></span> seconds per image, looking and zooming around.</p>
     <p>The task will automatically restart momentarily.</p>
   </div>
 
