--- a/src/instructions/overview.html
+++ b/src/instructions/overview.html
@@ -1,11 +1,11 @@
 <div>
   <p>
     This task must be completed on a <strong>mobile device</strong>.
-    In this task, you will be presented with a photo gallery of <strong><span class="num-photos"></span> <span class="big-name"></span></strong>.
+    In this task, you will be presented with a gallery of <strong><span class="num-images"></span> <span class="big-name"></span></strong>.
     Please inspect each <span class="small-name"></span> carefully, using the <strong>pinch zoom gesture</strong> on your mobile device to study details.
     When examining each <span class="small-name"></span>, please <strong>zoom in</strong> on the regions of the <span class="small-name"></span> you think are most important.
     We will capture this zoom data as an indication that you've done the task thoroughly.
-    Please spend at least <strong><span class="min-sec-photo"></span> – <span class="max-sec-photo"></span> seconds</strong> per <span class="small-name"></span> looking around and zooming.
+    Please spend at least <strong><span class="min-sec-image"></span> – <span class="max-sec-image"></span> seconds</strong> per <span class="small-name"></span> looking around and zooming.
     Please swipe right after viewing each <span class="small-name"></span> to move to the next one.
     You will not be allowed to submit the HIT unless you have done the task sufficiently thoroughly.
     The entire task should take you about <strong><span class="min-min-total"></span> – <span class="max-min-total"></span> minutes</strong> and must be completed in one sitting.
