I think it works now.

--- a/src/viewer/viewer.html
+++ b/src/viewer/viewer.html
@@ -4,7 +4,9 @@
     <h2>No posters here, make sure the url is correct!</h2>
   </div>
 
-  <div id="galleries"></div>
+  <div id="galleries">
+    Click on each button to complete each part.
+  </div>
 
   <div id="experiment"><!-- pswp ui goes here --></div>
 
@@ -18,7 +20,6 @@
     <h1>Complete!</h1>
     <p>Your submit key is below. Copy this into the submit box in the HIT.</p>
     <p id="submit-code"></p>
-    <p>You may refresh the page to re-view the images if you desire.</p>
   </div>
 
   <form></form>
