Update contact email.

--- a/src/instructions/instructions.html
+++ b/src/instructions/instructions.html
@@ -19,6 +19,6 @@
   </form>
   <!-- TODO: enter submit code -->
   <div class="disclaimer">
-    <p>You are participating in a study being performed by researchers in the MIT Computer Science and Artificial Intelligence Lab. If you have questions about this resarch, please contact <a href='mailto:zoya@mit.edu'>zoya@mit.edu</a>. Your participation in this research is voluntary. You may decline further participation, at any time, without adverse consequences. Your anonymity is assured; the researchers who have requested your participation will not receive any personal information about you.</p>
+    <p>You are participating in a study being performed by researchers in the MIT Computer Science and Artificial Intelligence Lab. If you have questions about this resarch, please contact <a href='mailto:zoyatorrlab@gmail.com'>zoyatorrlab@gmail.com</a>. Your participation in this research is voluntary. You may decline further participation, at any time, without adverse consequences. Your anonymity is assured; the researchers who have requested your participation will not receive any personal information about you.</p>
   </div>
 </div>
